fix: 修复 scrollbar 滚动条颜色丢失问题

--- a/packages/theme-chalk/src/common/color.less
+++ b/packages/theme-chalk/src/common/color.less
@@ -138,4 +138,7 @@
 
   // switch
   --hv-switch-lable-color: #303133;
+
+  // scrollbar
+  --hv-scrollbar-thumb-hover: var(--hv-text-color-placeholder);
 }
